added frontent validation in signup,add&edit product,add&edit category&address

--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -211,7 +211,7 @@
                             <h4>Here you can add product</h4>
                         </div>
                         <div class="card-body">
-                            <form method="post" action="/gadgetly/admin/addproduct" enctype="multipart/form-data" class="add-product">
+                            <form method="post" action="/gadgetly/admin/addproduct" enctype="multipart/form-data" class="add-product" id="ProductForm">
                                 <div class="mb-4">
                                     <label for="product_name" class="form-label">Product title</label>
                                     <input type="text" placeholder="Type here" class="form-control" id="product_name" name="product_name" oninput="validateProductName()">
@@ -351,8 +351,8 @@
                                     <input type="text" class="form-control">
                                 </div>
                             </div> <!-- row.// -->
-                        </div>
-                    </div> -->
+                        <!-- </div> -->
+                    <!-- </div> --> -->
                      <!-- card end// -->
                 </div>
             </div>
@@ -434,21 +434,42 @@
             }
         }
 
-
-        // document.addEventListener('DOMContentLoaded',function(){
-        //     const productSubmitButton = doucument.querySelectorAll('.add-product');
-        //     productSubmitButton.addEventListener('submit',async function(event){
-        //         event.preventDefault();
-        //         validateProductName();
-        //         validateProductPrice();
-        //         validateProductSprice();
-        //         validateProductStock();
-        //         validateProductImage();
-        //         document.querySelectorAll('.text-danger').innerHtml
-        //         if()
-
-        //     })
-        // })
+    </script>
+    <script>
+        document.addEventListener('DOMContentLoaded',function(){
+            productForm = document.getElementById('ProductForm')
+            productForm.addEventListener('submit',(event)=>{
+                console.log("productform validartin hitted")
+               const productName = document.getElementById('product_name').value.trim();
+                if(productName === ""){
+                    document.getElementById('errorProductName').innerHTML="product name required";
+                    event.preventDefault();
+                }else{
+                    document.getElementById('errorProductName').innerHTML=""
+                }
+                const productPrice = document.getElementById('product_price').value.trim();
+                if(productPrice === ""){
+                    document.getElementById('errorProductPrice').innerHTML="product Price required"
+                    event.preventDefault();
+                }else{
+                    document.getElementById('errorProductPrice').innerHTML=""
+                }
+                const productSPrice =document.getElementById('product_sprice').value.trim();
+                if(productSPrice === ""){
+                    document.getElementById('errorProductSprice').innerHTML="product sale price required"
+                    event.preventDefault();
+                }else{
+                    document.getElementById('errorProductSprice').innerHTML="";
+                }
+                const productStock = document.getElementById('product_stock').value.trim();
+                if(productStock === ""){
+                    document.getElementById('errorProductStock').innerHTML="product Stock required";
+                    event.preventDefault();
+                }else{
+                    document.getElementById('errorProductStock').innerHTML=""
+                }
+            })
+        })
     </script>
 </body>
 
